# DeepDown

./: .gitignore  DL_simple_GAN.ipynb  LICENSE  README.md  config.copy.yaml  config.default.yaml  config.yaml.example  orography_conversion.ipynb  plot_BC_models.py  pyproject.toml  requirements-optional.txt  requirements.txt  run_bias_sbck.py  run_process.sh  setup.py  slurm-58681775.out
deepdown/: DL_SwinTransformer.py  DL_simple_GAN.py  SwinTransformer.py  bias_correction_RCM.py  bias_correction_classic.py  bias_correction_classic_mv.py  bias_correction_ibicus.py  bias_correction_sbck.py  config.py  constants.py  downscaling_gans_train.py  plot_bias_correction.py  plot_coarsened_mch_data.py  test.py  train.py  train_diffusion.py  train_simple_gan.py  train_srgan.py  train_swin_transformer.py
models/: SRGAN.py
notebooks/: DL_SwinTransformer.ipynb  DL_simple_GAN.ipynb  DL_test_difussion.ipynb  Untitled.ipynb  exploring_RCM.ipynb  exploring_data.ipynb  orography_conversion.ipynb  train_diffusion.ipynb  train_simple_gan.ipynb  train_swin_transformer.ipynb
preprocessing/: dem_convert_to_netcdf.py  era5land_resample_t2m.py  era5land_resample_tp.py
scripts/: bias_correction_compare_methods_sbck.py  bias_correction_plot_methods_comparison_sbck.py  run_bias_sbck.py
src/: DL_SwinTransformer.py  DL_simple_GAN.py  test.py
unused/: helpers.py  train_diffusion.py  train_swin_transformer.py  utils_helpers.py  utils_loss_fcts.py  utils_plots.py
utils/: Datagenerators.py  SRGAN.py  data_loader.py  data_process.py  helpers.py  utils_gan.py  utils_gans.py  utils_plot.py
(+19 files in other folders)
